--- a/BrainGames/BrainGames.csproj
+++ b/BrainGames/BrainGames.csproj
@@ -12,5 +12,8 @@
         <None Update="**\*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Readme.md">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
