--- a/BrainGames/BrainGames.csproj
+++ b/BrainGames/BrainGames.csproj
@@ -8,4 +8,9 @@
         <RootNamespace>brain_games</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Update="**\*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
